force-app/main/default/objects/Bus__c/fields/Eligible_For_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Eligible_For_Maintenance__c</fullName>
    <formula>IF(ISPICKVAL(Maximum_Capacity__c, &quot;60&quot;) &amp;&amp; ISPICKVAL(Current_Status__c, &quot;Ready For Use&quot;) &amp;&amp; NOT(ISNULL(Odometer_Reading__c)), 
IF(ISNULL(Recorded_Odometer__c), Odometer_Reading__c &gt;= 5000, (Odometer_Reading__c - Recorded_Odometer__c) &gt;= 5000),
false)</formula>
    <label>Eligible For Maintenance?</label>
    <type>Checkbox</type>
</CustomField>