force-app/main/default/objects/Bus__c/fields/Has_Air_Conditioning__c.field-meta.xml
<CustomField>
    <fullName>Has_Air_Conditioning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Air Conditioning?</label>
    <type>Checkbox</type>
</CustomField>