force-app/main/default/objects/Bus__c/fields/Last_Location__c.field-meta.xml
<CustomField>
    <fullName>Last_Location__c</fullName>
    <label>Last Location</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>