force-app/main/default/objects/Bus__c/fields/Odometer_Reading__c.field-meta.xml
<CustomField>
    <fullName>Odometer_Reading__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Odometer Reading (mi)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>