force-app/main/default/objects/Bus__c/fields/Recorded_Odometer__c.field-meta.xml
<CustomField>
    <fullName>Recorded_Odometer__c</fullName>
    <label>Recorded Odometer (mi)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>