force-app/main/default/objects/Bus__c/fields/Thumbnail__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail__c</fullName>
    <formula>if(ISBLANK(Thumbnail_URL__c), &apos;&apos;, IMAGE(Thumbnail_URL__c, &quot;Thumbnail&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thumbnail</label>
    <type>Text</type>
</CustomField>