force-app/main/default/objects/Bus__c/validationRules/Odometer_More_Than_Last_Recorded_Reading.validationRule-meta.xml
<ValidationRule>
    <fullName>Odometer_More_Than_Last_Recorded_Reading</fullName>
    <active>true</active>
    <errorConditionFormula>Odometer_Reading__c &lt;  Recorded_Odometer__c</errorConditionFormula>
    <errorDisplayField>Odometer_Reading__c</errorDisplayField>
    <errorMessage>Odometer reading cannot be less than last recorded reading.</errorMessage>
</ValidationRule>