force-app/main/default/objects/Bus__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Garage__c</columns>
    <columns>Current_Status__c</columns>
    <columns>Odometer_Reading__c</columns>
    <columns>Resale_Value__c</columns>
    <columns>Recorded_Odometer__c</columns>
    <columns>Last_Location__Latitude__s</columns>
    <columns>Last_Location__Longitude__s</columns>
    <columns>Last_Maintenance_Date__c</columns>
    <columns>Eligible_For_Maintenance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>